--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_width="383dp"
         android:layout_height="51dp"
         android:layout_marginTop="20dp"
-        android:drawableRight="@drawable/password"
+        android:drawableRight="@android:drawable/ic_lock_lock"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="password"
