--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -78,7 +78,7 @@
         android:layout_width="387dp"
         android:layout_height="44dp"
         android:layout_marginTop="12dp"
-        android:drawableRight="@drawable/password"
+        android:drawableRight="@android:drawable/ic_lock_lock"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Confirm Password"
